--- a/app/src/main/res/drawable/btn1.xml
+++ b/app/src/main/res/drawable/btn1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<gradient android:startColor="#C4C4C4" android:endColor="#C4C4C4"></gradient>
+<gradient android:startColor="#ffffff" android:endColor="#ffffff"></gradient>
     <corners android:radius="10dp"></corners>
 </shape>
