--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -33,39 +33,118 @@
         android:orientation="vertical"
         android:layout_margin="10dp"
         android:padding="20dp"
-        android:background="@drawable/btn1">
-        <TextView
-            android:layout_width="270dp"
+        android:background="@drawable/btn">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_gravity="center"
-            android:layout_height="100dp"
-            android:layout_margin="25dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="horizontal"
             android:background="@drawable/btn2">
-
-        </TextView>
-        <TextView
-            android:layout_width="270dp"
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="110dp"
+                android:src="@drawable/maiz"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"></ImageView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="MAIZ"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:gravity="center"
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_gravity="center"
-            android:layout_height="100dp"
-            android:layout_margin="25dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="horizontal"
             android:background="@drawable/btn2">
-
-        </TextView>
-        <TextView
-            android:layout_width="270dp"
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="110dp"
+                android:src="@drawable/Whea"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"></ImageView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="WHEAT"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:gravity="center"
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_gravity="center"
-            android:layout_height="100dp"
-            android:layout_margin="25dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="horizontal"
             android:background="@drawable/btn2">
-
-        </TextView>
-        <TextView
-            android:layout_width="270dp"
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:src="@drawable/onio"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"></ImageView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="ONION"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:gravity="center"
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_gravity="center"
-            android:layout_height="100dp"
-            android:layout_margin="25dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="horizontal"
             android:background="@drawable/btn2">
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="110dp"
+                android:src="@drawable/tomat"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"></ImageView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="TOMATO"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:gravity="center"
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="horizontal"
+            android:background="@drawable/btn2">
+            <ImageView
+                android:layout_width="120dp"
+                android:layout_height="110dp"
+                android:src="@drawable/maiz"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"></ImageView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="WHEAT"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:gravity="center"
+        </LinearLayout>
 
-        </TextView>
     </LinearLayout>
     </LinearLayout>
 </ScrollView>
